add getClient api
