# server/DB/DBConnector.ts
@@ -12,10 +12,12 @@ interface IUrlData {
 export class DBConnector {
     private readonly autData
     private readonly users
+    private readonly clients
 
     constructor() {
         this.autData = data.autData
         this.users = data.users
+        this.clients = data.clients
     }
 
     public getUserId(login: string, pass: string) {
@@ -25,5 +27,9 @@ export class DBConnector {
 
     public getUserDataById(id: string) {
         return this.users.find((user: { id: string }) => user.id === id)
+    }
+
+    public getClientsByDoctorId(id: string) {
+        return this.clients.filter((user: { doctorID: string }) => user.doctorID === id)
     }
 }
